@@ -153,13 +153,10 @@ top-level directory <computeroutput>valgrind/</computeroutput>.</para>
    <computeroutput>date</computeroutput> is just an example).
    The output should be something like this:</para>
 <programlisting><![CDATA[
-  ==738== foobar-0.0.1, a foobarring tool for x86-linux.
-  ==738== Copyright (C) 2002-2007, and GNU GPL'd, by Julian Seward et al.
-  ==738== Using LibVEX rev 1791, a library for dynamic binary translation.
-  ==738== Copyright (C) 2004-2007, and GNU GPL'd, by OpenWorks LLP.
-  ==738== Using valgrind-3.3.0, a dynamic binary instrumentation framework.
-  ==738== Copyright (C) 2000-2007, and GNU GPL'd, by Julian Seward et al.
-  ==738== For more details, rerun with: -v
+  ==738== foobar-0.0.1, a foobarring tool.
+  ==738== Copyright (C) 2002-2009, and GNU GPL'd, by J. Programmer.
+  ==738== Using Valgrind-3.5.0.SVN and LibVEX; rerun with -h for copyright info
+  ==738== Command: date
   ==738==
   Tue Nov 27 12:40:49 EST 2007
   ==738==]]></programlisting>
